apps/scrypted/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrypted
  namespace: default
spec:
  selector:
    matchLabels:
      app: scrypted
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: scrypted
    spec:
      nodeName: agent-3
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        supplementalGroups:
          - 303
      containers:
        - name: scrypted
          image: ghcr.io/koush/scrypted
          ports:
            - containerPort: 11080
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /server/volume
              name: scrypted-content
            - name: "render-device"
              mountPath: "/dev/dri/renderD128"
      volumes:
        - name: scrypted-content
          persistentVolumeClaim:
            claimName: scrypted-claim
        - name: "render-device"
          hostPath:
            path: "/dev/dri/renderD128"
      hostNetwork: true
